RESOLVED FIXED242361
[iOS] REGRESSION(251612@main): fullscreen close/PiP buttons are too close to the top of the screen
https://bugs.webkit.org/show_bug.cgi?id=242361
Summary [iOS] REGRESSION(251612@main): fullscreen close/PiP buttons are too close to ...
Devin Rousso
Reported 2022-07-05 13:55:42 PDT
.
Attachments
Devin Rousso
Comment 1 2022-07-05 13:57:52 PDT
Devin Rousso
Comment 2 2022-07-05 13:59:05 PDT
EWS
Comment 3 2022-07-05 15:46:12 PDT
Committed 252157@main (c60ef5766625): <https://commits.webkit.org/252157@main> Reviewed commits have been landed. Closing PR #2093 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.