Cherry-pick c60ef5766625. rdar://problem/92740201

[iOS] REGRESSION(251612@main): fullscreen close/PiP buttons are too close to the top of the screen
    https://bugs.webkit.org/show_bug.cgi?id=242361
    <rdar://problem/92740201>

    Reviewed by Tim Horton.

    * Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
    (-[WKFullScreenViewController loadView]):

    Canonical link: https://commits.webkit.org/252157@main

Canonical link: https://commits.webkit.org/252091.1@safari-7614.1.20-branch